Blocks Hover Effect Fixed and more Contrasty

--- a/src/views/blocks/Kanban/Kanban.css
+++ b/src/views/blocks/Kanban/Kanban.css
@@ -54,6 +54,7 @@
     border-radius: 10px;
     width: 100%;
     padding:0;
+    background-color: rgba(0, 0, 0,0.4);
   }
   
   .kb-lower > section > h4{
